--- a/css/main.css
+++ b/css/main.css
@@ -44,12 +44,10 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .container {
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (min-width: 480px) {
@@ -158,10 +156,6 @@ p, h1, h2, h3, h4, h5, h6 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-
-.form-field:nth-child(5) {
-  margin-bottom: 0px;
 }
 
 .form-field:hover .registration-icon,
@@ -600,10 +594,9 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .logo {
   font-family: Raleway;
-  font-style: normal;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.2;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-decoration: none;
   color: var(--accent-color);
@@ -967,12 +960,33 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .team-title {
-  margin-bottom: 47px;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
   text-align: center;
   letter-spacing: 0.03em;
+  color: var(--headlines-text-color);
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .team-title {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-title {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-title {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .team-photo-description {
@@ -1064,16 +1078,18 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .clients__title {
-  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
 }
 
 @media screen and (min-width: 1200px) {
   .clients__title {
+    font-size: 36px;
+    line-height: 1.17;
     margin-bottom: 50px;
   }
 }
@@ -1200,14 +1216,33 @@ p, h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-list {
+    margin-left: -30px;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .buttons {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .buttons {
+    padding: 60px 0px;
+  }
+}
+
 .btn-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  margin-bottom: 40px;
 }
 
 @media screen and (max-width: 767px) {
@@ -1215,7 +1250,15 @@ p, h1, h2, h3, h4, h5, h6 {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin-top: -15px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .btn-menu {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
@@ -1274,11 +1317,6 @@ p, h1, h2, h3, h4, h5, h6 {
   color: var(--second-title-color);
 }
 
-.buttons {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .content-item:hover .portfolio-overlay,
 .content-item:focus .portfolio-overlay {
   -webkit-transform: translateY(0);
@@ -1293,11 +1331,9 @@ p, h1, h2, h3, h4, h5, h6 {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .content-item {
-    margin-left: 15px;
-    margin-right: 15px;
-    width: 370px;
     -ms-flex-preferred-size: calc(100% / 2 - 30px);
         flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
   }
   .content-item:not(:last-child) {
     margin-bottom: 30px;
@@ -1440,44 +1476,73 @@ p, h1, h2, h3, h4, h5, h6 {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .footer-left {
+    margin-right: 70px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
-    text-align: center;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-left {
-    margin-right: auto;
+    width: 100%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 60px;
   }
 }
 
 .adress-only {
-  text-align: center;
-  margin-bottom: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 @media screen and (min-width: 1200px) {
   .adress-only {
     margin-right: 70px;
-    text-align: left;
-    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .adress-only {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .adress-only {
+    margin-bottom: 60px;
   }
 }
 
 .footer-address {
-  font-style: normal;
+  margin-top: 20px;
 }
 
-.address {
-  width: 231px;
-  height: 81px;
+@media screen and (max-width: 1199px) {
+  .footer-address {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.address-link {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -1498,11 +1563,21 @@ p, h1, h2, h3, h4, h5, h6 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
+}
+
+.footer-mail,
+.footer-tel {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
 }
 
 .footer-icons {
@@ -1518,7 +1593,6 @@ p, h1, h2, h3, h4, h5, h6 {
 
 @media screen and (min-width: 1200px) {
   .footer-icons {
-    margin-right: 70px;
     text-align: left;
     margin-bottom: 0;
   }
@@ -1672,16 +1746,6 @@ p, h1, h2, h3, h4, h5, h6 {
   margin-left: 10px;
 }
 
-.footer-mail,
-.footer-tel {
-  display: block;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
 .footer-address .footer-contacts + .footer-contacts {
   margin-top: 9px;
 }
@@ -1819,6 +1883,12 @@ p, h1, h2, h3, h4, h5, h6 {
   }
 }
 
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .hero-title {
+    text-align: center;
+  }
+}
+
 .hero-description {
   font-weight: 400;
   font-size: 14px;
@@ -1830,34 +1900,71 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .main-title-section {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-}
-
-.overlay {
-  height: 600px;
-  max-width: 1600px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/mainImg.jpg");
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/mainImg.jpg");
-  background-color: black;
+  background-color: #2f303a;
+  text-align: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 480px;
+  height: 400px;
+}
+
+@media screen and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .main-title-section {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main-title-section {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-tablet.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-tablet.jpg");
+    background-size: 768px;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .main-title-section {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-tablet2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-tablet2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-title-section {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-desktop.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-desktop.jpg");
+    height: 600px;
+    background-size: 1600px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .main-title-section {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-desktop2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-desktop2x.jpg");
+  }
 }
 
 .main-title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--second-title-color);
-  padding-top: 200px;
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
