--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -1,9 +1,8 @@
 .container{
-    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-    margin: 0 auto;
-    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
 
     @media screen and (min-width: 480px) {
         width: 480px;
