--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -18,50 +18,46 @@
 }
 
 .footer-left{
-  @media screen and (min-width: 768px) {
-    display: flex;
-    align-items: baseline;
-    text-align: center;
-  }
-
   @media screen and (min-width: 1200px) {
-    margin-right: auto;
-  
-    // @media screen and (min-width: 1200px) {
-    //     margin-right: 70px;
-    //     display: flex;
-    //   }
-    
-    //   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    //     width: 100%;
-    //     // justify-content: space-around;
-    //     align-items: baseline;
-    //     display: flex;
-    //     margin-bottom: 60px;
+      margin-right: 70px;
+      display: flex;
     }
-}
+  
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: 100%;
+      justify-content: space-around;
+      align-items: baseline;
+      display: flex;
+      margin-bottom: 60px;
+    }
+  }
+  
 .adress-only{
-  text-align: center;
-  margin-bottom: 60px;
+  
+  display: flex;
+  flex-direction: column;
 
   @media screen and (min-width: 1200px) {
     margin-right: 70px;
-    text-align: left;
-    margin-bottom: 0;
+  }
+
+  @media screen and (max-width: 1199px) {
+    align-items: center;
+    // margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    margin-bottom: 60px;
   }
 } 
 .footer-address{
-  font-style: normal;
-// font-weight: normal;
-// font-size: 14px;
-// line-height: 1.71px;
-// text-align: center;
-// letter-spacing: 0.03em;
-}
+  margin-top: 20px;
 
-.address{
-    width: 231px;
-    height: 81px;   
+  @media screen and (max-width: 1199px) {
+    align-items: center;
+  }
+}
+.address-link{  
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -78,9 +74,20 @@
       @media screen and (max-width: 1199px) {
         align-items: center;
         display: flex;
-        flex-direction: column;
+        justify-content: center;
     }
   }
+  .footer-mail,
+  .footer-tel{
+      display: block;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+      color: rgba(255, 255, 255, 0.6);  
+      font-style:normal;
+      }
+
 .footer-icons{
   text-align: center;
   margin-bottom: 60px;
@@ -90,7 +97,6 @@
   }
 
   @media screen and (min-width: 1200px) {
-    margin-right: 70px;
     text-align: left;
     margin-bottom: 0;
   }
@@ -204,19 +210,7 @@ display: inline-flex;
 .subscribe-icon{
     fill:rgba(255, 255, 255, 1);
     margin-left: 10px;
-}
-
-
-.footer-mail,
-.footer-tel{
-    display: block;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);    
-    }
-    
+}  
 
 .footer-address .footer-contacts + .footer-contacts {
         margin-top: 9px;
