--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -1,8 +1,9 @@
 .modal{
     position: absolute;
     margin-left: 15px;
-    // margin-top: 93px;
-
+    margin-top: 93px;
+    width: 100%;
+    
     // top:50%;
     // left:50%;
     // max-width: 450px;
