--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -51,7 +51,7 @@
   }
 } 
 .footer-address{
-  margin-top: 20px;
+  // margin-top: 20px;
 
   @media screen and (max-width: 1199px) {
     align-items: center;
@@ -71,12 +71,13 @@
     }
     
 .footer-contacts {
+  display: flex;
       @media screen and (max-width: 1199px) {
         align-items: center;
         display: flex;
         justify-content: center;
     }
-  }
+}
   .footer-mail,
   .footer-tel{
       display: block;
@@ -157,7 +158,7 @@
 }
 .form-footer-input{
     width: 358px;
-    height:50px;
+    // height:50px;
     margin-right: 12px;
     align-items: center;
     justify-content: center;
