--- a/scss/layout/_main-title-section.scss
+++ b/scss/layout/_main-title-section.scss
@@ -82,9 +82,9 @@
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (max-width: 1199px) {
-        font-size: 28px;
-        line-height: 1.18;
+    @media screen and (min-width: 1200px) {
+        font-size: 44px;
+        line-height: 1.36;
         margin-bottom: 30px;
       }
     }
