--- a/scss/layout/_portfolio-list.scss
+++ b/scss/layout/_portfolio-list.scss
@@ -177,7 +177,7 @@ color: var(--primary-text-color);
 
 .photo-description{
     padding: 20px 24px;
-  width: 100%;
+  // width: 100%;
   border: 1px solid #eeeeee;
   border-top: 0;
 
